[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://Levels/CameraFollower.gd" type="Script" id=2]
[ext_resource path="res://TilesetScenes/Tileset.tscn" type="PackedScene" id=3]
[ext_resource path="res://Friends/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/Dagger.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Room1.gd" type="Script" id=7]
[ext_resource path="res://Levels/Objects/Lever.tscn" type="PackedScene" id=8]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="CameraFollower" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="CameraFollower"]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="Tilemaps" parent="." instance=ExtResource( 3 )]

[node name="TileMap" parent="Tilemaps" index="0"]
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 10, 2, 0, 9, 3, 0, 9, 4, 0, 9, 5, 0, 10, 6, 0, 8, 7, 0, 10, 8, 0, 8, 9, 0, 9, 10, 0, 10, 11, 0, 10, 12, 0, 9, 13, 0, 8, 14, 0, 9, 15, 0, 9, 16, 0, 8, 17, 0, 8, 18, 0, 10, 19, 0, 9, 20, 0, 9, 21, 0, 10, 22, 0, 10, 23, 0, 10, 24, 0, 8, 25, 0, 9, 26, 0, 9, 27, 0, 9, 28, 0, 10, 29, 0, 8, 30, 0, 9, 31, 0, 9, 32, 0, 10, 33, 0, 8, 34, 0, 10, 35, 0, 10, 36, 0, 8, 37, 0, 10, 38, 0, 8, 39, 0, 9, 40, 0, 9, 41, 0, 9, 42, 0, 8, 43, 0, 9, 44, 0, 10, 45, 0, 9, 46, 0, 9, 47, 0, 9, 48, 0, 10, 49, 0, 8, 50, 0, 9, 51, 0, 8, 52, 0, 9, 53, 0, 10, 54, 0, 9, 55, 0, 8, 56, 0, 10, 57, 0, 9, 58, 0, 8, 59, 0, 10, 60, 0, 9, 61, 0, 9, 62, 0, 8, 63, 0, 2, 65536, 0, 6, 65537, 0, 65558, 65538, 0, 13, 65539, 0, 12, 65540, 0, 13, 65541, 0, 11, 65542, 0, 11, 65543, 0, 12, 65544, 0, 11, 65545, 0, 12, 65546, 0, 12, 65547, 0, 12, 65548, 0, 11, 65549, 0, 13, 65550, 0, 13, 65551, 0, 11, 65552, 0, 13, 65553, 0, 13, 65554, 0, 13, 65555, 0, 13, 65556, 0, 12, 65557, 0, 11, 65558, 0, 11, 65559, 0, 12, 65560, 0, 12, 65561, 0, 11, 65562, 0, 13, 65563, 0, 12, 65564, 0, 13, 65565, 0, 13, 65566, 0, 65557, 65567, 0, 0, 65568, 0, 0, 65569, 0, 65558, 65570, 0, 12, 65571, 0, 13, 65572, 0, 13, 65573, 0, 13, 65574, 0, 12, 65575, 0, 13, 65576, 0, 12, 65577, 0, 12, 65578, 0, 13, 65579, 0, 12, 65580, 0, 12, 65581, 0, 11, 65582, 0, 13, 65583, 0, 13, 65584, 0, 11, 65585, 0, 13, 65586, 0, 11, 65587, 0, 11, 65588, 0, 12, 65589, 0, 12, 65590, 0, 11, 65591, 0, 11, 65592, 0, 12, 65593, 0, 12, 65594, 0, 13, 65595, 0, 13, 65596, 0, 11, 65597, 0, 12, 65598, 0, 65557, 65599, 0, 15, 131072, 0, 6, 131073, 0, 14, 131074, 1, 0, 131075, 1, 4, 131076, 1, 4, 131077, 1, 4, 131078, 1, 1, 131079, 1, 2, 131080, 1, 4, 131081, 1, 4, 131082, 1, 4, 131083, 4, 0, 131084, 1, 4, 131085, 1, 3, 131086, 1, 2, 131087, 1, 4, 131088, 1, 2, 131089, 1, 2, 131090, 1, 1, 131091, 1, 4, 131092, 1, 2, 131093, 1, 4, 131094, 1, 3, 131095, 1, 4, 131096, 1, 3, 131097, 1, 3, 131098, 1, 3, 131099, 1, 2, 131100, 1, 3, 131101, 1, 5, 131102, 0, 5, 131103, 0, 0, 131104, 0, 0, 131105, 0, 16, 131106, 1, 0, 131107, 1, 3, 131108, 1, 2, 131109, 1, 4, 131110, 1, 2, 131111, 1, 2, 131112, 1, 2, 131113, 1, 2, 131114, 1, 2, 131115, 1, 1, 131116, 1, 4, 131117, 1, 3, 131118, 1, 3, 131119, 1, 4, 131120, 1, 1, 131121, 1, 3, 131122, 1, 3, 131123, 1, 1, 131124, 1, 3, 131125, 1, 3, 131126, 1, 4, 131127, 1, 3, 131128, 1, 3, 131129, 1, 3, 131130, 1, 2, 131131, 1, 1, 131132, 1, 1, 131133, 1, 5, 131134, 0, 5, 131135, 0, 16, 196608, 0, 6, 196609, 0, 16, 196610, 1, 65536, 196611, 1, 65538, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65539, 196615, 1, 65538, 196616, 1, 65539, 196617, 1, 65539, 196618, 1, 65537, 196619, 4, 65536, 196620, 1, 65539, 196621, 1, 65538, 196622, 1, 65540, 196623, 1, 65537, 196624, 1, 65539, 196625, 1, 65538, 196626, 1, 65538, 196627, 1, 65540, 196628, 1, 65539, 196629, 1, 65537, 196630, 1, 65537, 196631, 1, 65539, 196632, 1, 65538, 196633, 1, 65537, 196634, 1, 65538, 196635, 1, 65538, 196636, 1, 65540, 196637, 1, 65541, 196638, 0, 3, 196639, 0, 11, 196640, 0, 12, 196641, 0, 4, 196642, 1, 65536, 196643, 1, 65537, 196644, 1, 65540, 196645, 1, 65539, 196646, 1, 65537, 196647, 1, 65539, 196648, 1, 65539, 196649, 1, 65537, 196650, 1, 65539, 196651, 1, 65538, 196652, 1, 65540, 196653, 1, 65537, 196654, 1, 65540, 196655, 1, 65538, 196656, 1, 65540, 196657, 1, 65540, 196658, 1, 65540, 196659, 1, 65539, 196660, 1, 65539, 196661, 1, 65537, 196662, 1, 65540, 196663, 1, 65539, 196664, 1, 65540, 196665, 1, 65537, 196666, 1, 65540, 196667, 1, 65538, 196668, 1, 65539, 196669, 1, 65541, 196670, 0, 7, 196671, 0, 14, 262144, 0, 7, 262145, 0, 16, 262146, 3, 1, 262147, 3, 9, 262148, 3, 8, 262149, 3, 10, 262150, 3, 10, 262151, 3, 9, 262152, 3, 8, 262153, 3, 8, 262154, 3, 10, 262155, 3, 8, 262156, 3, 8, 262157, 3, 8, 262158, 3, 9, 262159, 3, 10, 262160, 3, 8, 262161, 3, 8, 262162, 3, 8, 262163, 3, 10, 262164, 3, 8, 262165, 3, 8, 262166, 3, 10, 262167, 3, 8, 262168, 3, 8, 262169, 3, 10, 262170, 3, 8, 262171, 3, 8, 262172, 3, 9, 262173, 3, 65565, 262174, 1, 0, 262175, 1, 3, 262176, 1, 3, 262177, 1, 5, 262178, 3, 1, 262179, 3, 8, 262180, 3, 8, 262181, 3, 9, 262182, 3, 8, 262183, 3, 9, 262184, 3, 9, 262185, 3, 9, 262186, 3, 9, 262187, 3, 8, 262188, 3, 8, 262189, 3, 9, 262190, 3, 8, 262191, 3, 10, 262192, 3, 10, 262193, 3, 9, 262194, 3, 10, 262195, 3, 9, 262196, 3, 10, 262197, 3, 9, 262198, 3, 10, 262199, 3, 10, 262200, 3, 8, 262201, 3, 9, 262202, 3, 8, 262203, 3, 8, 262204, 3, 8, 262205, 3, 65565, 262206, 0, 7, 262207, 0, 15, 327680, 0, 6, 327681, 0, 16, 327682, 3, 7, 327683, 3, 131074, 327684, 3, 131075, 327685, 3, 131075, 327686, 3, 0, 327687, 3, 131075, 327688, 3, 131073, 327689, 3, 131074, 327690, 3, 131076, 327691, 3, 131076, 327692, 3, 0, 327693, 3, 131074, 327694, 3, 131073, 327695, 3, 131073, 327696, 3, 131076, 327697, 3, 131073, 327698, 3, 131073, 327699, 3, 131075, 327700, 3, 0, 327701, 3, 131073, 327702, 3, 131076, 327703, 3, 0, 327704, 3, 0, 327705, 3, 131075, 327706, 3, 131074, 327707, 3, 131076, 327708, 3, 131075, 327709, 3, 16, 327710, 1, 65536, 327711, 1, 65538, 327712, 1, 65540, 327713, 1, 65541, 327714, 3, 7, 327715, 3, 131075, 327716, 3, 131075, 327717, 3, 131075, 327718, 3, 131073, 327719, 3, 131075, 327720, 3, 131073, 327721, 3, 131075, 327722, 3, 131073, 327723, 3, 131074, 327724, 3, 131076, 327725, 3, 131076, 327726, 3, 131073, 327727, 3, 131074, 327728, 3, 0, 327729, 3, 131076, 327730, 3, 131074, 327731, 3, 131076, 327732, 3, 131074, 327733, 3, 131076, 327734, 3, 131073, 327735, 3, 131073, 327736, 3, 131073, 327737, 3, 131076, 327738, 3, 0, 327739, 3, 131074, 327740, 3, 131074, 327741, 3, 16, 327742, 0, 5, 327743, 0, 14, 393216, 0, 6, 393217, 0, 16, 393218, 3, 6, 393219, 3, 131074, 393220, 3, 0, 393221, 3, 131074, 393222, 3, 131073, 393223, 3, 131073, 393224, 3, 131073, 393225, 3, 131076, 393226, 3, 131075, 393227, 3, 131073, 393228, 3, 0, 393229, 3, 131074, 393230, 3, 0, 393231, 3, 131076, 393232, 3, 131075, 393233, 3, 0, 393234, 3, 131074, 393235, 3, 131075, 393236, 3, 131074, 393237, 3, 131073, 393238, 3, 131075, 393239, 3, 131076, 393240, 3, 131076, 393241, 3, 131074, 393242, 3, 131073, 393243, 3, 131073, 393244, 3, 0, 393245, 3, 65561, 393246, 3, 21, 393247, 3, 21, 393248, 3, 21, 393249, 3, 22, 393250, 3, 65560, 393251, 3, 0, 393252, 3, 131073, 393253, 3, 131073, 393254, 3, 131076, 393255, 3, 131076, 393256, 3, 131075, 393257, 3, 131073, 393258, 3, 131073, 393259, 3, 0, 393260, 3, 131074, 393261, 3, 0, 393262, 3, 131076, 393263, 3, 131076, 393264, 3, 131076, 393265, 3, 131073, 393266, 3, 131073, 393267, 3, 131076, 393268, 3, 131076, 393269, 3, 131076, 393270, 3, 131076, 393271, 3, 0, 393272, 3, 131076, 393273, 3, 131074, 393274, 3, 131074, 393275, 3, 131073, 393276, 3, 0, 393277, 3, 16, 393278, 0, 6, 393279, 0, 15, 458752, 0, 5, 458753, 0, 14, 458754, 3, 6, 458755, 3, 131076, 458756, 3, 131076, 458757, 3, 131076, 458758, 3, 0, 458759, 3, 131076, 458760, 3, 131075, 458761, 3, 131075, 458762, 3, 0, 458763, 3, 131073, 458764, 3, 0, 458765, 3, 131076, 458766, 3, 131076, 458767, 3, 131075, 458768, 3, 131073, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 131073, 458773, 3, 131075, 458774, 3, 0, 458775, 3, 131074, 458776, 3, 131074, 458777, 3, 131075, 458778, 3, 0, 458779, 3, 131073, 458780, 3, 0, 458781, 3, 16, 458782, 0, 17, 458783, 0, 21, 458784, 0, 22, 458785, 0, 19, 458786, 3, 7, 458787, 3, 131073, 458788, 3, 131073, 458789, 3, 131073, 458790, 3, 0, 458791, 3, 131074, 458792, 3, 131074, 458793, 3, 131074, 458794, 3, 131073, 458795, 3, 0, 458796, 3, 131073, 458797, 3, 131075, 458798, 3, 131076, 458799, 3, 131075, 458800, 3, 131073, 458801, 3, 0, 458802, 3, 131075, 458803, 3, 131074, 458804, 3, 131075, 458805, 3, 131073, 458806, 3, 131073, 458807, 3, 131073, 458808, 3, 131074, 458809, 3, 131076, 458810, 3, 131076, 458811, 3, 131075, 458812, 3, 131074, 458813, 3, 14, 458814, 0, 5, 458815, 0, 16, 524288, 0, 5, 524289, 0, 16, 524290, 3, 5, 524291, 3, 131073, 524292, 3, 131075, 524293, 3, 131073, 524294, 3, 131074, 524295, 3, 131075, 524296, 3, 131075, 524297, 3, 131076, 524298, 3, 131074, 524299, 3, 0, 524300, 3, 0, 524301, 3, 131073, 524302, 3, 131075, 524303, 3, 0, 524304, 3, 131073, 524305, 3, 131076, 524306, 3, 131075, 524307, 3, 131073, 524308, 3, 131075, 524309, 3, 131073, 524310, 3, 131075, 524311, 3, 131076, 524312, 3, 131074, 524313, 3, 131075, 524314, 3, 0, 524315, 3, 131075, 524316, 3, 131074, 524317, 3, 16, 524318, 1, 0, 524319, 1, 3, 524320, 1, 3, 524321, 1, 5, 524322, 3, 6, 524323, 3, 131076, 524324, 3, 131074, 524325, 3, 131074, 524326, 3, 131075, 524327, 3, 131076, 524328, 3, 0, 524329, 3, 131075, 524330, 3, 131075, 524331, 3, 131076, 524332, 3, 131074, 524333, 3, 131073, 524334, 3, 131073, 524335, 3, 131076, 524336, 3, 131074, 524337, 3, 131076, 524338, 3, 131076, 524339, 3, 131075, 524340, 3, 131074, 524341, 3, 131074, 524342, 3, 0, 524343, 3, 131075, 524344, 3, 131074, 524345, 3, 131074, 524346, 3, 131076, 524347, 3, 131075, 524348, 3, 131073, 524349, 3, 15, 524350, 0, 6, 524351, 0, 15, 589824, 0, 7, 589825, 0, 14, 589826, 3, 7, 589827, 3, 131076, 589828, 3, 131073, 589829, 3, 131076, 589830, 3, 131076, 589831, 3, 131074, 589832, 3, 131075, 589833, 3, 131073, 589834, 3, 131075, 589835, 3, 0, 589836, 3, 131074, 589837, 3, 0, 589838, 3, 0, 589839, 3, 131073, 589840, 3, 131074, 589841, 3, 131076, 589842, 3, 0, 589843, 3, 131073, 589844, 3, 0, 589845, 3, 131073, 589846, 3, 131075, 589847, 3, 0, 589848, 3, 0, 589849, 3, 131075, 589850, 3, 131074, 589851, 3, 131073, 589852, 3, 131076, 589853, 3, 14, 589854, 1, 65536, 589855, 1, 65537, 589856, 1, 65540, 589857, 1, 65541, 589858, 3, 5, 589859, 3, 131076, 589860, 3, 131073, 589861, 3, 131075, 589862, 3, 131076, 589863, 3, 131073, 589864, 3, 131076, 589865, 3, 131074, 589866, 3, 131076, 589867, 3, 131074, 589868, 3, 0, 589869, 3, 131076, 589870, 3, 131073, 589871, 3, 131073, 589872, 3, 131074, 589873, 3, 131076, 589874, 3, 0, 589875, 3, 131075, 589876, 3, 131076, 589877, 3, 131075, 589878, 3, 131074, 589879, 3, 131075, 589880, 3, 131074, 589881, 3, 131076, 589882, 3, 131075, 589883, 3, 131074, 589884, 3, 131073, 589885, 3, 15, 589886, 0, 7, 589887, 0, 14, 655360, 0, 6, 655361, 0, 14, 655362, 3, 7, 655363, 3, 131074, 655364, 3, 131074, 655365, 3, 131076, 655366, 3, 131076, 655367, 3, 0, 655368, 3, 131076, 655369, 3, 131075, 655370, 3, 0, 655371, 3, 131074, 655372, 3, 131076, 655373, 3, 131075, 655374, 3, 131075, 655375, 3, 0, 655376, 3, 131076, 655377, 3, 0, 655378, 3, 131074, 655379, 3, 131076, 655380, 3, 131073, 655381, 3, 131076, 655382, 3, 0, 655383, 3, 131074, 655384, 3, 131075, 655385, 3, 131073, 655386, 3, 131074, 655387, 3, 131076, 655388, 3, 0, 655389, 3, 65561, 655390, 3, 21, 655391, 3, 21, 655392, 3, 21, 655393, 3, 22, 655394, 3, 65560, 655395, 3, 131073, 655396, 3, 0, 655397, 3, 131075, 655398, 3, 131074, 655399, 3, 131073, 655400, 3, 0, 655401, 3, 131074, 655402, 3, 131075, 655403, 3, 131076, 655404, 3, 131075, 655405, 3, 131075, 655406, 3, 131073, 655407, 3, 131073, 655408, 3, 131074, 655409, 3, 131076, 655410, 3, 131074, 655411, 3, 131075, 655412, 3, 0, 655413, 3, 131073, 655414, 3, 131074, 655415, 3, 131075, 655416, 3, 131075, 655417, 3, 131075, 655418, 3, 131074, 655419, 3, 131076, 655420, 3, 131075, 655421, 3, 16, 655422, 0, 5, 655423, 0, 14, 720896, 0, 6, 720897, 0, 15, 720898, 3, 7, 720899, 3, 131074, 720900, 3, 131075, 720901, 3, 131076, 720902, 3, 131074, 720903, 3, 131073, 720904, 3, 131076, 720905, 3, 131074, 720906, 3, 131076, 720907, 3, 131076, 720908, 3, 131074, 720909, 3, 131076, 720910, 3, 131073, 720911, 3, 131073, 720912, 3, 131073, 720913, 3, 131074, 720914, 3, 131073, 720915, 3, 131073, 720916, 3, 131076, 720917, 3, 131075, 720918, 3, 131075, 720919, 3, 0, 720920, 3, 131076, 720921, 3, 131074, 720922, 3, 131076, 720923, 3, 131076, 720924, 3, 131074, 720925, 3, 16, 720926, 0, 17, 720927, 0, 21, 720928, 0, 22, 720929, 0, 19, 720930, 3, 6, 720931, 3, 131074, 720932, 3, 131074, 720933, 3, 131074, 720934, 3, 131075, 720935, 3, 131074, 720936, 3, 131073, 720937, 3, 131073, 720938, 3, 131076, 720939, 3, 131073, 720940, 3, 131076, 720941, 3, 131076, 720942, 3, 131073, 720943, 3, 0, 720944, 3, 0, 720945, 3, 131074, 720946, 3, 131073, 720947, 3, 131075, 720948, 3, 131076, 720949, 3, 131076, 720950, 3, 131076, 720951, 3, 131075, 720952, 3, 131076, 720953, 3, 0, 720954, 3, 131073, 720955, 3, 131076, 720956, 3, 131073, 720957, 3, 14, 720958, 0, 7, 720959, 0, 14, 786432, 0, 7, 786433, 0, 14, 786434, 3, 5, 786435, 3, 131076, 786436, 3, 131076, 786437, 3, 0, 786438, 3, 131076, 786439, 3, 0, 786440, 3, 0, 786441, 3, 131074, 786442, 3, 0, 786443, 3, 131073, 786444, 3, 131076, 786445, 3, 131074, 786446, 3, 0, 786447, 3, 131075, 786448, 3, 131074, 786449, 3, 131075, 786450, 3, 131076, 786451, 3, 131074, 786452, 3, 131075, 786453, 3, 131073, 786454, 3, 0, 786455, 3, 0, 786456, 3, 131074, 786457, 3, 131074, 786458, 3, 131076, 786459, 3, 131074, 786460, 3, 131073, 786461, 3, 15, 786462, 1, 0, 786463, 1, 1, 786464, 1, 3, 786465, 1, 5, 786466, 3, 5, 786467, 3, 131076, 786468, 3, 131076, 786469, 3, 131075, 786470, 3, 131073, 786471, 3, 131073, 786472, 3, 131076, 786473, 3, 131076, 786474, 3, 131075, 786475, 3, 131074, 786476, 3, 0, 786477, 3, 131075, 786478, 3, 131073, 786479, 3, 131073, 786480, 3, 0, 786481, 3, 131074, 786482, 3, 131073, 786483, 3, 131075, 786484, 3, 131076, 786485, 3, 0, 786486, 3, 131073, 786487, 3, 0, 786488, 3, 0, 786489, 3, 0, 786490, 3, 0, 786491, 3, 131076, 786492, 3, 0, 786493, 3, 15, 786494, 0, 5, 786495, 0, 16, 851968, 0, 6, 851969, 0, 15, 851970, 3, 6, 851971, 3, 0, 851972, 3, 131074, 851973, 3, 131076, 851974, 3, 131075, 851975, 3, 131075, 851976, 3, 131075, 851977, 3, 131076, 851978, 3, 131074, 851979, 3, 131073, 851980, 3, 131073, 851981, 3, 131076, 851982, 3, 131073, 851983, 3, 131073, 851984, 3, 131074, 851985, 3, 131074, 851986, 3, 0, 851987, 3, 131073, 851988, 3, 131073, 851989, 3, 131073, 851990, 3, 131074, 851991, 3, 131074, 851992, 3, 131076, 851993, 3, 131075, 851994, 3, 0, 851995, 3, 131074, 851996, 3, 0, 851997, 3, 16, 851998, 1, 65536, 851999, 1, 65537, 852000, 1, 65540, 852001, 1, 65541, 852002, 3, 7, 852003, 3, 131074, 852004, 3, 131076, 852005, 3, 131073, 852006, 3, 131074, 852007, 3, 131075, 852008, 3, 131075, 852009, 3, 131076, 852010, 3, 131075, 852011, 3, 131073, 852012, 3, 131076, 852013, 3, 131073, 852014, 3, 131076, 852015, 3, 131074, 852016, 3, 0, 852017, 3, 131073, 852018, 3, 131075, 852019, 3, 131075, 852020, 3, 131074, 852021, 3, 131074, 852022, 3, 131075, 852023, 3, 0, 852024, 3, 0, 852025, 3, 131076, 852026, 3, 131075, 852027, 3, 131076, 852028, 3, 131074, 852029, 3, 15, 852030, 0, 7, 852031, 0, 14, 917504, 0, 7, 917505, 0, 16, 917506, 3, 7, 917507, 3, 131074, 917508, 3, 131074, 917509, 3, 131075, 917510, 3, 131073, 917511, 3, 0, 917512, 3, 131074, 917513, 3, 131075, 917514, 3, 131075, 917515, 3, 131073, 917516, 3, 131076, 917517, 3, 131076, 917518, 3, 0, 917519, 3, 0, 917520, 3, 131075, 917521, 3, 0, 917522, 3, 131075, 917523, 3, 0, 917524, 3, 131074, 917525, 3, 131075, 917526, 3, 0, 917527, 3, 131073, 917528, 3, 0, 917529, 3, 131073, 917530, 3, 131075, 917531, 3, 131074, 917532, 3, 131076, 917533, 3, 65561, 917534, 3, 22, 917535, 3, 22, 917536, 3, 21, 917537, 3, 21, 917538, 3, 65560, 917539, 3, 131075, 917540, 3, 131074, 917541, 3, 131075, 917542, 3, 131074, 917543, 3, 131074, 917544, 3, 0, 917545, 3, 0, 917546, 3, 131074, 917547, 3, 131076, 917548, 3, 131074, 917549, 3, 131074, 917550, 3, 131075, 917551, 3, 131076, 917552, 3, 131074, 917553, 3, 0, 917554, 3, 0, 917555, 3, 131074, 917556, 3, 0, 917557, 3, 131073, 917558, 3, 0, 917559, 3, 131074, 917560, 3, 131073, 917561, 3, 131073, 917562, 3, 131074, 917563, 3, 131076, 917564, 3, 131076, 917565, 3, 16, 917566, 0, 6, 917567, 0, 14, 983040, 0, 6, 983041, 0, 14, 983042, 3, 6, 983043, 3, 0, 983044, 3, 131075, 983045, 3, 131076, 983046, 3, 131074, 983047, 3, 131073, 983048, 3, 0, 983049, 3, 131073, 983050, 3, 131073, 983051, 3, 131076, 983052, 3, 131075, 983053, 3, 131076, 983054, 3, 0, 983055, 3, 131075, 983056, 3, 131074, 983057, 3, 131075, 983058, 3, 131073, 983059, 3, 131075, 983060, 3, 131075, 983061, 3, 131076, 983062, 3, 131073, 983063, 3, 131076, 983064, 3, 131074, 983065, 3, 131076, 983066, 3, 131073, 983067, 3, 131075, 983068, 3, 0, 983069, 3, 15, 983070, 0, 1, 983071, 0, 9, 983072, 0, 8, 983073, 0, 2, 983074, 3, 6, 983075, 3, 131074, 983076, 3, 131075, 983077, 3, 131074, 983078, 3, 131074, 983079, 3, 0, 983080, 3, 0, 983081, 3, 131074, 983082, 3, 131076, 983083, 3, 131074, 983084, 3, 131076, 983085, 3, 0, 983086, 3, 131075, 983087, 3, 131074, 983088, 3, 131073, 983089, 3, 0, 983090, 3, 131073, 983091, 3, 0, 983092, 3, 0, 983093, 3, 131076, 983094, 3, 131074, 983095, 3, 0, 983096, 3, 131076, 983097, 3, 131075, 983098, 3, 131076, 983099, 3, 0, 983100, 3, 131073, 983101, 3, 15, 983102, 0, 6, 983103, 0, 14, 1048576, 0, 5, 1048577, 0, 16, 1048578, 3, 65564, 1048579, 3, 12, 1048580, 3, 13, 1048581, 3, 11, 1048582, 3, 12, 1048583, 3, 13, 1048584, 3, 12, 1048585, 3, 11, 1048586, 3, 11, 1048587, 3, 12, 1048588, 3, 12, 1048589, 3, 12, 1048590, 3, 11, 1048591, 3, 13, 1048592, 3, 13, 1048593, 3, 13, 1048594, 3, 13, 1048595, 3, 12, 1048596, 3, 13, 1048597, 3, 13, 1048598, 3, 12, 1048599, 3, 13, 1048600, 3, 12, 1048601, 3, 12, 1048602, 3, 12, 1048603, 3, 12, 1048604, 3, 12, 1048605, 3, 4, 1048606, 0, 6, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 14, 1048610, 3, 3, 1048611, 3, 11, 1048612, 3, 11, 1048613, 3, 13, 1048614, 3, 13, 1048615, 3, 13, 1048616, 3, 11, 1048617, 3, 11, 1048618, 3, 12, 1048619, 3, 11, 1048620, 3, 12, 1048621, 3, 12, 1048622, 3, 13, 1048623, 3, 13, 1048624, 3, 13, 1048625, 3, 12, 1048626, 3, 11, 1048627, 3, 13, 1048628, 3, 12, 1048629, 3, 13, 1048630, 3, 11, 1048631, 3, 12, 1048632, 3, 13, 1048633, 3, 13, 1048634, 3, 12, 1048635, 3, 12, 1048636, 3, 13, 1048637, 3, 65563, 1048638, 0, 5, 1048639, 0, 15, 1114112, 0, 7, 1114113, 0, 65556, 1114114, 0, 9, 1114115, 0, 10, 1114116, 0, 9, 1114117, 0, 10, 1114118, 0, 8, 1114119, 0, 8, 1114120, 0, 8, 1114121, 0, 8, 1114122, 0, 8, 1114123, 0, 9, 1114124, 0, 8, 1114125, 0, 10, 1114126, 0, 10, 1114127, 0, 9, 1114128, 0, 10, 1114129, 0, 9, 1114130, 0, 8, 1114131, 0, 10, 1114132, 0, 9, 1114133, 0, 8, 1114134, 0, 9, 1114135, 0, 10, 1114136, 0, 8, 1114137, 0, 9, 1114138, 0, 10, 1114139, 0, 8, 1114140, 0, 9, 1114141, 0, 8, 1114142, 0, 65555, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 65556, 1114146, 0, 9, 1114147, 0, 8, 1114148, 0, 9, 1114149, 0, 8, 1114150, 0, 10, 1114151, 0, 10, 1114152, 0, 8, 1114153, 0, 10, 1114154, 0, 9, 1114155, 0, 9, 1114156, 0, 8, 1114157, 0, 10, 1114158, 0, 8, 1114159, 0, 9, 1114160, 0, 10, 1114161, 0, 9, 1114162, 0, 8, 1114163, 0, 9, 1114164, 0, 8, 1114165, 0, 8, 1114166, 0, 10, 1114167, 0, 10, 1114168, 0, 8, 1114169, 0, 8, 1114170, 0, 8, 1114171, 0, 10, 1114172, 0, 8, 1114173, 0, 8, 1114174, 0, 65555, 1114175, 0, 16, 1179648, 0, 3, 1179649, 0, 11, 1179650, 0, 11, 1179651, 0, 11, 1179652, 0, 12, 1179653, 0, 12, 1179654, 0, 12, 1179655, 0, 13, 1179656, 0, 12, 1179657, 0, 12, 1179658, 0, 11, 1179659, 0, 13, 1179660, 0, 12, 1179661, 0, 11, 1179662, 0, 12, 1179663, 0, 13, 1179664, 0, 12, 1179665, 0, 11, 1179666, 0, 12, 1179667, 0, 13, 1179668, 0, 13, 1179669, 0, 12, 1179670, 0, 13, 1179671, 0, 12, 1179672, 0, 13, 1179673, 0, 12, 1179674, 0, 11, 1179675, 0, 12, 1179676, 0, 13, 1179677, 0, 12, 1179678, 0, 12, 1179679, 0, 13, 1179680, 0, 12, 1179681, 0, 12, 1179682, 0, 11, 1179683, 0, 12, 1179684, 0, 13, 1179685, 0, 12, 1179686, 0, 12, 1179687, 0, 13, 1179688, 0, 12, 1179689, 0, 13, 1179690, 0, 11, 1179691, 0, 11, 1179692, 0, 13, 1179693, 0, 11, 1179694, 0, 11, 1179695, 0, 12, 1179696, 0, 11, 1179697, 0, 12, 1179698, 0, 12, 1179699, 0, 13, 1179700, 0, 11, 1179701, 0, 12, 1179702, 0, 13, 1179703, 0, 11, 1179704, 0, 13, 1179705, 0, 11, 1179706, 0, 13, 1179707, 0, 13, 1179708, 0, 11, 1179709, 0, 12, 1179710, 0, 11, 1179711, 0, 4 )

[node name="Decoration" parent="Tilemaps" index="1"]
tile_data = PoolIntArray( 524322, 0, 0, 524323, 0, 65536, 524324, 0, 65536, 524325, 0, 65537, 524326, 0, 65537, 524327, 0, 65536, 524328, 0, 65536, 524329, 0, 65537, 524330, 0, 65537, 524331, 0, 0, 524332, 0, 1, 524333, 0, 0, 524334, 0, 0, 524335, 0, 65536, 524336, 0, 0, 524337, 0, 65537, 524338, 0, 1, 524339, 0, 0, 524340, 0, 65537, 524341, 0, 1, 524342, 0, 1, 524343, 0, 0, 524344, 0, 65536, 524345, 0, 0, 524346, 0, 1, 524347, 0, 1, 524348, 0, 0, 524349, 0, 0, 786466, 0, 0, 786467, 0, 1, 786468, 0, 65536, 786469, 0, 65537, 786470, 0, 0, 786471, 0, 1, 786472, 0, 0, 786473, 0, 1, 786474, 0, 65537, 786475, 0, 65536, 786476, 0, 65536, 786477, 0, 65536, 786478, 0, 65537, 786479, 0, 65536, 786480, 0, 1, 786481, 0, 65536, 786482, 0, 1, 786483, 0, 65537, 786484, 0, 1, 786485, 0, 65536, 786486, 0, 0, 786487, 0, 65537, 786488, 0, 1, 786489, 0, 65536, 786490, 0, 0, 786491, 0, 65536, 786492, 0, 0, 786493, 0, 0 )

[node name="YSort" type="YSort" parent="."]
editor/display_folded = true

[node name="Character" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 229.129, 145.505 )

[node name="Character2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 185.402, 159.777 )
player = "p2"

[node name="Sword" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 140, 110 )

[node name="Dagger" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 130, 190 )

[node name="Room1" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Lever" parent="Room1" instance=ExtResource( 8 )]
position = Vector2( 496.706, 101.222 )

[node name="Room2" type="Node2D" parent="."]
position = Vector2( 512, 0 )

[node name="Lever" parent="Room2" instance=ExtResource( 8 )]
position = Vector2( -15.2559, 163.926 )

[node name="Lever2" parent="Room2" instance=ExtResource( 8 )]
position = Vector2( -14.9304, 227.876 )

[editable path="Tilemaps"]
